update views in users
